@@ -665,6 +665,12 @@ Uses Gtk-PERL.
 an interactive terrain/height_field editor.
 </ul>
 
+<ul>
+<li><a href="http://www.rastersoft.com/pppmonen.html">PPPMON</a> -
+an RP3 clone. It shows the activity in the PPP 
+conection, and starts/stops the PPP conetion in an easy way.
+</ul>
+
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
