@@ -167,6 +167,38 @@ Oct&nbsp;1&nbsp;2001
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Nov&nbsp;7&nbsp;2001
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>New Glade Tutorial</B>
+<P>
+Ishan Chattopadhyaya has written a new Glade tutorial,
+<a href="http://www.geocities.com/ichattopadhyaya/linux/glade.htm">
+Starting off in Glade/GTK+</a>.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Nov&nbsp;7&nbsp;2001
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Updated French Documentation</B>
+<P>
+Karquel Olivier has posted
+<a href="http://yellowspoon.free.fr/">updated French Glade and libglade documentation</a>.
+(Click on the 'Glade' button at the bottom of the page.)
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Aug&nbsp;22&nbsp;2001
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
