@@ -1,3 +1,9 @@
+2001-11-07  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added PPPMON.
+
+	* index.html: added 2 news items.
+
 2001-10-11  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added Terraform.
